# jira-cli

./: .dockerignore  .gitignore  .golangci.yml  .goreleaser.yml  CLAUDE.md  Dockerfile  Dockerfile.goreleaser  LICENSE  Makefile  README.md  SECURITY.md  cmd_cover.out  cmd_cover2.out  codecov.yml  cov_all.out  cov_final.out  coverage_after.out  coverage_check.out  coverage_current.out  coverage_final.out  coverage_final2.out  coverage_final3.out  coverage_new.out  coverage_new2.out  coverage_new_run.out  coverage_pr70.out  coverage_v2.out  coverage_v3.out  coverage_v4.out  coverage_v5.out  coverage_v6.out  e2e_test.go  go.mod  go.sum  main.go  project_schedule.xlsx
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docs.yml  release.yml  scorecard.yml  security.yml  sign-old-releases.yml  spec-auto-release.yml  spec-drift.yml
.planning/: PROJECT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  (+2 more)
cmd/: avatar.go  avatar_act.go  avatar_act_test.go  avatar_test.go  batch.go  batch_test.go  bugfix_test.go  bughunt2_test.go  bughunt_test.go  cache_test.go  character.go  character_test.go  client_test.go  config_resolve_test.go  configure.go  configure_test.go  context_cmd.go  context_cmd_test.go  context_schema.go  coverage_gaps_test.go  diff.go  diff_schema.go  diff_test.go  doctor.go  doctor_test.go  execute_coverage_test.go  explain.go  explain_test.go  export_test.go  generated_test.go  helpers_test.go  pipe.go  pipe_test.go  preset.go  preset_test.go  raw.go  raw_test.go  root.go  root_test.go  schema_cmd.go  (+13 more)
npm/: README.md  install.js  package.json
python/: README.md  pyproject.toml  requirements-build.txt
python/jira_jr/: __init__.py
spec/: jira-v3-latest.json  jira-v3.json
website/: index.md  package-lock.json  package.json
(+133 files in other folders)
