[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jira-jr"
version = "0.0.0"
description = "Agent-friendly Jira CLI with structured JSON output and jq filtering"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
keywords = ["jira", "cli", "ai", "agent", "json"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",

    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://sofq.github.io/jira-cli/"
Documentation = "https://sofq.github.io/jira-cli/"
Repository = "https://github.com/sofq/jira-cli"
Issues = "https://github.com/sofq/jira-cli/issues"

[project.scripts]
jr = "jira_jr:main"

[tool.setuptools.packages.find]
where = ["."]
